@@ -1289,10 +1289,25 @@ See also: @lock, locktypes, @elock
 
 See also: TRANSPARENT, @conformat, @nameformat, @descformat
 & @firstexit
-  @firstexit <name of exit>
-
-  Makes the named exit the first in the listing of Obvious Exits in a
-  room. You must control the room in order to use this command.
+  @firstexit <exit1>[, ... , <exitN>]
+  
+  Normally, exits appear in a room's Obvious Exits list in the order they
+  were created, most recent first. You can use this command to rearrange
+  them. @firstexit moves each exit, in the order given, to the top of the
+  Obvious Exits list for its source room. You must control the room.
+  
+  Example:
+    > @dig/teleport Test Room
+    > @open Two ; @open Three ; @open One
+    > look
+    Test Room(#3Rn)
+		Obvious exits:
+    One, Three, and Two
+    > @firstexit two, one
+    > look
+    Test Room(#3Rn)
+		Obvious exits:
+    One, Two, and Three
 
 See also: EXITS, @open, @link
 & @filter
