@@ -16,15 +16,25 @@ Version 1.8.3 patchlevel 12                     ??? ??, 2010
 Minor Changes:
  * Helpfile cleanup. [MG]
  * Expand the @lock key optimizer. Try '@lock me=!!=me'.
+ * /'s can now be included in the subject of a @mail 
+   message via doubling it up -- @mail foo=a//s//l/What's up? 
+   Suggested by paige.
  * locate() now ignores spaces in its 3rd argument. [MG]
+ * Change the default mud_name in mush.cnf from TinyMUSH
+   to PennMUSH. Suggested by many people over the years.
+ * @firstexit can now take multiple exits, and can affect exits in other
+   rooms. Suggested by AnneLions. [MG]
 
 Functions
  * llocks() without any arguments returns a list of the
    standard locks.
+ * unsetq(), to erase queue registers. [GM]
 
 Fixes:
  * English matching works better with possessive get
    (get box's 2nd thing). Reported by israphel.
+ * Many more messages generated by the server have been 
+   marked as translatable. By Stoko.
 
 & 1.8.3p11
 Version 1.8.3 patchlevel 11                     Jan 01, 2010
